testsuite/tests/rename/should_fail/rnfail016.hs
{-# OPTIONS_GHC -fno-warn-typed-holes #-}
module ShouldFail where

-- !!! Pattern syntax in expressions

f x = x@x

