testsuite/tests/rename/should_fail/rnfail016.stderr

rnfail016.hs:6:7: error:
    Pattern syntax in expression context: x@x
    Did you mean to enable TypeApplications?
